timeline fix on mobile devices

--- a/css/responsive-main.css
+++ b/css/responsive-main.css
@@ -206,7 +206,7 @@
     }
     
     .timeline-dot {
-        left: 0;
+        left: 3px;
     }
     
     .timeline-date {
